// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`polytomic > gets all urls from docs config 1`] = `
[
  "polytomic.docs.buildwithfern.com/guides/introduction",
  "polytomic.docs.buildwithfern.com/guides/ip-whitelisting",
  "polytomic.docs.buildwithfern.com/guides/obtaining-api-keys",
  "polytomic.docs.buildwithfern.com/guides/quickstart",
  "polytomic.docs.buildwithfern.com/guides/native-clients",
  "polytomic.docs.buildwithfern.com/guides/concepts",
  "polytomic.docs.buildwithfern.com/guides/embedding-authentication",
  "polytomic.docs.buildwithfern.com/guides/versioning",
  "polytomic.docs.buildwithfern.com/guides/idempotent-requests",
  "polytomic.docs.buildwithfern.com/guides/events",
  "polytomic.docs.buildwithfern.com/guides/self-hosted-option",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/overview",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/affinity",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/airtable",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/amplitude",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/api",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/apollo-io",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/asana",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/ascend",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/attio",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/aws-s-3",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/aws-athena",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/aws-open-search",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/azure-blob-storage",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/azure-sql",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/bigquery",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/cloud-sql-my-sql",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/cloud-sql-postgres",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/chargebee",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/clari-copilot",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/construction-wire",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/cosmos-db",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/customer-io",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/databricks",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/datadog",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/dbt-cloud",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/delighted",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/dialpad",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/dittofeed",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/dynamo-db",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/facebook-ads",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/freshdesk",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/front",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/full-story",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/gong",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/google-cloud-storage",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/github",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/google-ads",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/google-workspace",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/google-sheets",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/harmonic",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/heap",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/heron-data",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/honeycomb",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/hub-spot",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/intercom",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/iterable",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/jira",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/klaviyo",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/kustomer",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/linear",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/linked-in-ads",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/lob",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/mailercheck",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/marketo",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/monday-com",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/mongo-db",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/microsoft-ads",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/my-sql",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/netsuite",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/outreach",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/pardot",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/pipedrive",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/postgres",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/predict-leads",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/quickbooks",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/recharge",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/redshift",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/redshift-serverless",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/reply-io",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/salesforce",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/salesloft",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/seam-ai",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/segment",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/sftp",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/shopify",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/short-io",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/slack",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/smartlead-ai",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/snowflake",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/statsig",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/strackr",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/stripe",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/survicate",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/synapse",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/tixr",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/unbounce",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/uservoice",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/vanilla-forums",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/webhooks",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/zendesk-chat",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/zendesk-support",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/connections/zoom-info",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/cdc-streaming-from-databases",
  "polytomic.docs.buildwithfern.com/guides/configuring-your-connections/syncing-to-custom-webhooks",
  "polytomic.docs.buildwithfern.com/guides/code-examples/overview",
  "polytomic.docs.buildwithfern.com/guides/code-examples/bulk-sync-elt-from-hub-spot-to-postgre-sql",
  "polytomic.docs.buildwithfern.com/guides/code-examples/bulk-sync-elt-from-salesforce-to-s-3",
  "polytomic.docs.buildwithfern.com/guides/code-examples/bulk-sync-elt-from-salesforce-to-snowflake",
  "polytomic.docs.buildwithfern.com/guides/code-examples/model-sync-reverse-etl-from-snowflake-query-to-salesforce",
  "polytomic.docs.buildwithfern.com/guides/code-examples/model-sync-reverse-etl-from-mongo-db-to-salesforce",
  "polytomic.docs.buildwithfern.com/guides/code-examples/adding-users-from-snowflake-to-salesloft-cadence",
  "polytomic.docs.buildwithfern.com/guides/code-examples/joined-model-sync-from-postgres-airtable-and-stripe-to-hubspot",
  "polytomic.docs.buildwithfern.com/guides/code-examples/model-sync-from-my-sql-to-snowflake",
  "polytomic.docs.buildwithfern.com/guides/code-examples/model-sync-from-salesforce-to-netsuite",
  "polytomic.docs.buildwithfern.com/guides/code-examples/querying-salesforce-using-soql",
  "polytomic.docs.buildwithfern.com/api-reference/bulk-sync/list",
  "polytomic.docs.buildwithfern.com/api-reference/bulk-sync/create",
  "polytomic.docs.buildwithfern.com/api-reference/bulk-sync/get",
  "polytomic.docs.buildwithfern.com/api-reference/bulk-sync/update",
  "polytomic.docs.buildwithfern.com/api-reference/bulk-sync/remove",
  "polytomic.docs.buildwithfern.com/api-reference/bulk-sync/activate",
  "polytomic.docs.buildwithfern.com/api-reference/bulk-sync/start",
  "polytomic.docs.buildwithfern.com/api-reference/bulk-sync/get-status",
  "polytomic.docs.buildwithfern.com/api-reference/bulk-sync/get-source",
  "polytomic.docs.buildwithfern.com/api-reference/bulk-sync/get-destination",
  "polytomic.docs.buildwithfern.com/api-reference/bulk-sync/executions/list-status",
  "polytomic.docs.buildwithfern.com/api-reference/bulk-sync/executions/list",
  "polytomic.docs.buildwithfern.com/api-reference/bulk-sync/executions/get",
  "polytomic.docs.buildwithfern.com/api-reference/bulk-sync/executions/get-logs",
  "polytomic.docs.buildwithfern.com/api-reference/bulk-sync/executions/export-logs",
  "polytomic.docs.buildwithfern.com/api-reference/bulk-sync/schemas/list",
  "polytomic.docs.buildwithfern.com/api-reference/bulk-sync/schemas/patch",
  "polytomic.docs.buildwithfern.com/api-reference/bulk-sync/schemas/get",
  "polytomic.docs.buildwithfern.com/api-reference/bulk-sync/schemas/update",
  "polytomic.docs.buildwithfern.com/api-reference/connections/get-types",
  "polytomic.docs.buildwithfern.com/api-reference/connections/list",
  "polytomic.docs.buildwithfern.com/api-reference/connections/create",
  "polytomic.docs.buildwithfern.com/api-reference/connections/connect",
  "polytomic.docs.buildwithfern.com/api-reference/connections/get",
  "polytomic.docs.buildwithfern.com/api-reference/connections/update",
  "polytomic.docs.buildwithfern.com/api-reference/connections/remove",
  "polytomic.docs.buildwithfern.com/api-reference/connections/get-parameter-values",
  "polytomic.docs.buildwithfern.com/api-reference/query-runner/run-query",
  "polytomic.docs.buildwithfern.com/api-reference/query-runner/get-query",
  "polytomic.docs.buildwithfern.com/api-reference/models/get-enrichment-source",
  "polytomic.docs.buildwithfern.com/api-reference/models/post",
  "polytomic.docs.buildwithfern.com/api-reference/models/preview",
  "polytomic.docs.buildwithfern.com/api-reference/models/list",
  "polytomic.docs.buildwithfern.com/api-reference/models/create",
  "polytomic.docs.buildwithfern.com/api-reference/models/get",
  "polytomic.docs.buildwithfern.com/api-reference/models/update",
  "polytomic.docs.buildwithfern.com/api-reference/models/remove",
  "polytomic.docs.buildwithfern.com/api-reference/models/sample",
  "polytomic.docs.buildwithfern.com/api-reference/model-sync/get-source",
  "polytomic.docs.buildwithfern.com/api-reference/model-sync/get-source-fields",
  "polytomic.docs.buildwithfern.com/api-reference/model-sync/get-target",
  "polytomic.docs.buildwithfern.com/api-reference/model-sync/get-target-fields",
  "polytomic.docs.buildwithfern.com/api-reference/model-sync/get-target-objects",
  "polytomic.docs.buildwithfern.com/api-reference/model-sync/list",
  "polytomic.docs.buildwithfern.com/api-reference/model-sync/create",
  "polytomic.docs.buildwithfern.com/api-reference/model-sync/get-schedule-options",
  "polytomic.docs.buildwithfern.com/api-reference/model-sync/get",
  "polytomic.docs.buildwithfern.com/api-reference/model-sync/update",
  "polytomic.docs.buildwithfern.com/api-reference/model-sync/remove",
  "polytomic.docs.buildwithfern.com/api-reference/model-sync/activate",
  "polytomic.docs.buildwithfern.com/api-reference/model-sync/start",
  "polytomic.docs.buildwithfern.com/api-reference/model-sync/get-status",
  "polytomic.docs.buildwithfern.com/api-reference/model-sync/executions/list",
  "polytomic.docs.buildwithfern.com/api-reference/model-sync/executions/get",
  "polytomic.docs.buildwithfern.com/api-reference/model-sync/executions/get-log-urls",
  "polytomic.docs.buildwithfern.com/api-reference/model-sync/executions/get-logs",
  "polytomic.docs.buildwithfern.com/api-reference/schemas/refresh",
  "polytomic.docs.buildwithfern.com/api-reference/schemas/get-status",
  "polytomic.docs.buildwithfern.com/api-reference/schemas/get",
  "polytomic.docs.buildwithfern.com/api-reference/schemas/get-records",
  "polytomic.docs.buildwithfern.com/api-reference/events/list",
  "polytomic.docs.buildwithfern.com/api-reference/events/get-types",
  "polytomic.docs.buildwithfern.com/api-reference/jobs/get",
  "polytomic.docs.buildwithfern.com/api-reference/identity/get",
  "polytomic.docs.buildwithfern.com/api-reference/organization/list",
  "polytomic.docs.buildwithfern.com/api-reference/organization/create",
  "polytomic.docs.buildwithfern.com/api-reference/organization/get",
  "polytomic.docs.buildwithfern.com/api-reference/organization/update",
  "polytomic.docs.buildwithfern.com/api-reference/organization/remove",
  "polytomic.docs.buildwithfern.com/api-reference/users/list",
  "polytomic.docs.buildwithfern.com/api-reference/users/create",
  "polytomic.docs.buildwithfern.com/api-reference/users/get",
  "polytomic.docs.buildwithfern.com/api-reference/users/update",
  "polytomic.docs.buildwithfern.com/api-reference/users/remove",
  "polytomic.docs.buildwithfern.com/api-reference/users/create-api-key",
  "polytomic.docs.buildwithfern.com/api-reference/permissions/policies/list",
  "polytomic.docs.buildwithfern.com/api-reference/permissions/policies/create",
  "polytomic.docs.buildwithfern.com/api-reference/permissions/policies/get",
  "polytomic.docs.buildwithfern.com/api-reference/permissions/policies/update",
  "polytomic.docs.buildwithfern.com/api-reference/permissions/policies/remove",
  "polytomic.docs.buildwithfern.com/api-reference/permissions/roles/list",
  "polytomic.docs.buildwithfern.com/api-reference/permissions/roles/create",
  "polytomic.docs.buildwithfern.com/api-reference/permissions/roles/get",
  "polytomic.docs.buildwithfern.com/api-reference/permissions/roles/update",
  "polytomic.docs.buildwithfern.com/api-reference/permissions/roles/remove",
  "polytomic.docs.buildwithfern.com/api-reference/webhooks/list",
  "polytomic.docs.buildwithfern.com/api-reference/webhooks/create",
  "polytomic.docs.buildwithfern.com/api-reference/webhooks/get",
  "polytomic.docs.buildwithfern.com/api-reference/webhooks/update",
  "polytomic.docs.buildwithfern.com/api-reference/webhooks/remove",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/introduction",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/ip-whitelisting",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/obtaining-api-keys",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/quickstart",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/native-clients",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/concepts",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/embedding-authentication",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/versioning",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/idempotent-requests",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/events",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/self-hosted-option",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/overview",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/affinity",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/airtable",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/amplitude",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/api",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/apollo-io",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/asana",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/ascend",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/attio",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/aws-s-3",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/aws-athena",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/aws-open-search",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/azure-blob-storage",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/azure-sql",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/bigquery",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/cloud-sql-my-sql",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/cloud-sql-postgres",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/chargebee",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/clari-copilot",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/construction-wire",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/cosmos-db",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/customer-io",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/databricks",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/datadog",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/dbt-cloud",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/delighted",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/dialpad",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/dittofeed",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/dynamo-db",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/facebook-ads",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/freshdesk",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/front",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/full-story",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/gong",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/google-cloud-storage",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/github",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/google-ads",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/google-workspace",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/google-sheets",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/harmonic",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/heap",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/heron-data",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/honeycomb",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/hub-spot",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/intercom",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/iterable",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/jira",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/klaviyo",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/kustomer",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/linear",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/linked-in-ads",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/lob",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/mailercheck",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/marketo",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/monday-com",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/mongo-db",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/microsoft-ads",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/my-sql",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/netsuite",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/outreach",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/pardot",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/pipedrive",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/postgres",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/predict-leads",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/quickbooks",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/recharge",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/redshift",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/redshift-serverless",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/reply-io",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/salesforce",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/salesloft",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/seam-ai",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/segment",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/sftp",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/shopify",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/short-io",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/slack",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/smartlead-ai",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/snowflake",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/statsig",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/strackr",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/stripe",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/survicate",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/synapse",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/tixr",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/unbounce",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/uservoice",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/vanilla-forums",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/webhooks",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/zendesk-chat",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/zendesk-support",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/connections/zoom-info",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/cdc-streaming-from-databases",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/configuring-your-connections/syncing-to-custom-webhooks",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/code-examples/overview",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/code-examples/bulk-sync-elt-from-hub-spot-to-postgre-sql",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/code-examples/bulk-sync-elt-from-salesforce-to-s-3",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/code-examples/bulk-sync-elt-from-salesforce-to-snowflake",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/code-examples/model-sync-reverse-etl-from-snowflake-query-to-salesforce",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/code-examples/model-sync-reverse-etl-from-mongo-db-to-salesforce",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/code-examples/adding-users-from-snowflake-to-salesloft-cadence",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/code-examples/joined-model-sync-from-postgres-airtable-and-stripe-to-hubspot",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/code-examples/model-sync-from-my-sql-to-snowflake",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/code-examples/model-sync-from-salesforce-to-netsuite",
  "polytomic.docs.buildwithfern.com/2024-02-08/guides/code-examples/querying-salesforce-using-soql",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/bulk-sync/list",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/bulk-sync/create",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/bulk-sync/get",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/bulk-sync/update",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/bulk-sync/remove",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/bulk-sync/activate",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/bulk-sync/start",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/bulk-sync/get-status",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/bulk-sync/get-source",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/bulk-sync/get-destination",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/bulk-sync/executions/list-status",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/bulk-sync/executions/list",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/bulk-sync/executions/get",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/bulk-sync/executions/get-logs",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/bulk-sync/executions/export-logs",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/bulk-sync/schemas/list",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/bulk-sync/schemas/patch",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/bulk-sync/schemas/get",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/bulk-sync/schemas/update",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/connections/get-types",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/connections/list",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/connections/create",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/connections/connect",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/connections/get",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/connections/update",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/connections/remove",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/connections/get-parameter-values",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/query-runner/run-query",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/query-runner/get-query",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/models/get-enrichment-source",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/models/post",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/models/preview",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/models/list",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/models/create",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/models/get",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/models/update",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/models/remove",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/models/sample",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/model-sync/get-source",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/model-sync/get-source-fields",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/model-sync/get-target",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/model-sync/get-target-fields",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/model-sync/get-target-objects",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/model-sync/list",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/model-sync/create",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/model-sync/get-schedule-options",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/model-sync/get",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/model-sync/update",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/model-sync/remove",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/model-sync/activate",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/model-sync/start",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/model-sync/get-status",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/model-sync/executions/list",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/model-sync/executions/get",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/model-sync/executions/get-log-urls",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/model-sync/executions/get-logs",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/schemas/refresh",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/schemas/get-status",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/schemas/get",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/schemas/get-records",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/events/list",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/events/get-types",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/jobs/get",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/identity/get",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/organization/list",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/organization/create",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/organization/get",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/organization/update",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/organization/remove",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/users/list",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/users/create",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/users/get",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/users/update",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/users/remove",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/users/create-api-key",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/permissions/policies/list",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/permissions/policies/create",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/permissions/policies/get",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/permissions/policies/update",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/permissions/policies/remove",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/permissions/roles/list",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/permissions/roles/create",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/permissions/roles/get",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/permissions/roles/update",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/permissions/roles/remove",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/webhooks/list",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/webhooks/create",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/webhooks/get",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/webhooks/update",
  "polytomic.docs.buildwithfern.com/2024-02-08/api-reference/webhooks/remove",
  "polytomic.docs.buildwithfern.com/2023-04-25/introduction",
  "polytomic.docs.buildwithfern.com/2023-04-25/obtaining-api-keys",
  "polytomic.docs.buildwithfern.com/2023-04-25/quickstart",
  "polytomic.docs.buildwithfern.com/2023-04-25/native-clients",
  "polytomic.docs.buildwithfern.com/2023-04-25/concepts",
  "polytomic.docs.buildwithfern.com/2023-04-25/embedding-authentication",
  "polytomic.docs.buildwithfern.com/2023-04-25/versioning",
  "polytomic.docs.buildwithfern.com/2023-04-25/idempotent-requests",
  "polytomic.docs.buildwithfern.com/2023-04-25/events",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/cdc-streaming-from-databases",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/affinity",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/airtable",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/amplitude",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/api",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/apollo-io",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/asana",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/ascend",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/attio",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/aws-s-3",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/aws-athena",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/aws-open-search",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/azure-blob-storage",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/azure-sql",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/biq-query",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/cloud-sql-my-sql",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/cloud-sql-postgres",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/chargebee",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/construction-wire",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/cosmos-db",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/customer-io",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/databricks",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/datadog",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/dbt-cloud",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/delighted",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/dialpad",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/dittofeed",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/dynamo-db",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/facebook-ads",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/freshdesk",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/front",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/full-story",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/google-cloud-storage",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/github",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/google-ads",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/google-workspace",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/google-sheets",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/harmonic",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/heap",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/honeycomb",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/hub-spot",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/intercom",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/iterable",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/jira",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/klaviyo",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/kustomer",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/linear",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/linkedin-ads",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/lob",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/mailercheck",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/marketo",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/mongo-db",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/microsoft-ads",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/my-sql",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/netsuite",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/outreach",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/pardot",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/pipedrive",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/postgres",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/predict-leads",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/quickbooks",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/recharge",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/redshift",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/redshift-serverless",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/reply-io",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/salesforce",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/segment",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/sftp",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/shopify",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/short-io",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/slack",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/snowflake",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/statsig",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/stripe",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/survicate",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/synapse",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/tixr",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/unbounce",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/uservoice",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/vanilla-forums",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/webhooks",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/zendesk-chat",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/zendesk-support",
  "polytomic.docs.buildwithfern.com/2023-04-25/configuring-your-connections/connections/zoom-info",
  "polytomic.docs.buildwithfern.com/2023-04-25/code-examples/bulk-sync-elt-from-hub-spot-to-postgre-sql",
  "polytomic.docs.buildwithfern.com/2023-04-25/code-examples/bulk-sync-elt-from-salesforce-to-s-3",
  "polytomic.docs.buildwithfern.com/2023-04-25/code-examples/bulk-sync-elt-from-salesforce-to-snowflake",
  "polytomic.docs.buildwithfern.com/2023-04-25/code-examples/model-sync-reverse-etl-from-mongo-db-to-salesforce",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/bulk-sync/get-destination",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/bulk-sync/get-source",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/bulk-sync/get-source-schema",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/bulk-sync/get-source-status",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/bulk-sync/list",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/bulk-sync/create",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/bulk-sync/get",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/bulk-sync/remove",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/bulk-sync/update",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/bulk-sync/activate",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/bulk-sync/start",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/bulk-sync/get-status",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/bulk-sync/executions/list",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/bulk-sync/executions/get",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/bulk-sync/schemas/list",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/bulk-sync/schemas/patch",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/bulk-sync/schemas/get",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/bulk-sync/schemas/update",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/connections/get-types",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/connections/list",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/connections/create",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/connections/connect",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/connections/get",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/connections/remove",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/connections/update",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/connections/get-parameter-values",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/connections/get-source",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/connections/get-source-fields",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/connections/get-target",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/connections/get-target-fields",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/schemas/get-records",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/models/post",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/models/preview",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/models/list",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/models/create",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/models/get",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/models/remove",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/models/update",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/models/sample",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/events/list",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/events/get-types",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/jobs/get",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/identity/get",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/organization/list",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/organization/create",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/organization/get",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/organization/remove",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/organization/update",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/users/list",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/users/create",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/users/get",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/users/remove",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/users/update",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/users/create-api-key",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/permissions/policies/list",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/permissions/policies/create",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/permissions/policies/get",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/permissions/policies/remove",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/permissions/policies/update",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/permissions/roles/list",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/permissions/roles/create",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/permissions/roles/get",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/permissions/roles/remove",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/permissions/roles/update",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/model-sync/list",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/model-sync/create",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/model-sync/get-schedule-options",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/model-sync/get",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/model-sync/remove",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/model-sync/update",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/model-sync/activate",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/model-sync/start",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/model-sync/get-status",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/model-sync/executions/list",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/model-sync/executions/get",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/model-sync/executions/get-log-urls",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/model-sync/executions/get-logs",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/webhooks/list",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/webhooks/create",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/webhooks/get",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/webhooks/remove",
  "polytomic.docs.buildwithfern.com/2023-04-25/api-reference/webhooks/update",
  "polytomic.docs.buildwithfern.com/2022-12-12/introduction",
  "polytomic.docs.buildwithfern.com/2022-12-12/obtaining-api-keys",
  "polytomic.docs.buildwithfern.com/2022-12-12/quickstart",
  "polytomic.docs.buildwithfern.com/2022-12-12/native-clients",
  "polytomic.docs.buildwithfern.com/2022-12-12/concepts",
  "polytomic.docs.buildwithfern.com/2022-12-12/embedding-authentication",
  "polytomic.docs.buildwithfern.com/2022-12-12/versioning",
  "polytomic.docs.buildwithfern.com/2022-12-12/idempotent-requests",
  "polytomic.docs.buildwithfern.com/2022-12-12/events",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/cdc-streaming-from-databases",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/affinity",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/airtable",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/amplitude",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/api",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/apollo-io",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/asana",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/ascend",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/attio",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/aws-s-3",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/aws-athena",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/aws-open-search",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/azure-blob-storage",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/azure-sql",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/biq-query",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/cloud-sql-my-sql",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/cloud-sql-postgres",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/chargebee",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/construction-wire",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/cosmos-db",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/customer-io",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/databricks",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/datadog",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/dbt-cloud",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/delighted",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/dialpad",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/dittofeed",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/dynamo-db",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/facebook-ads",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/freshdesk",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/front",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/full-story",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/google-cloud-storage",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/github",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/google-ads",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/google-workspace",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/google-sheets",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/harmonic",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/heap",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/honeycomb",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/hub-spot",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/intercom",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/iterable",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/jira",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/klaviyo",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/kustomer",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/linear",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/linkedin-ads",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/lob",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/mailercheck",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/marketo",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/mongo-db",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/microsoft-ads",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/my-sql",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/netsuite",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/outreach",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/pardot",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/pipedrive",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/postgres",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/predict-leads",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/quickbooks",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/recharge",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/redshift",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/redshift-serverless",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/reply-io",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/salesforce",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/segment",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/sftp",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/shopify",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/short-io",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/slack",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/snowflake",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/statsig",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/stripe",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/survicate",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/synapse",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/tixr",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/unbounce",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/uservoice",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/vanilla-forums",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/webhooks",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/zendesk-chat",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/zendesk-support",
  "polytomic.docs.buildwithfern.com/2022-12-12/configuring-your-connections/connections/zoom-info",
  "polytomic.docs.buildwithfern.com/2022-12-12/code-examples/bulk-sync-elt-from-hub-spot-to-postgre-sql",
  "polytomic.docs.buildwithfern.com/2022-12-12/code-examples/bulk-sync-elt-from-salesforce-to-s-3",
  "polytomic.docs.buildwithfern.com/2022-12-12/code-examples/bulk-sync-elt-from-salesforce-to-snowflake",
  "polytomic.docs.buildwithfern.com/2022-12-12/code-examples/model-sync-reverse-etl-from-mongo-db-to-salesforce",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/bulk-sync/get-destination",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/bulk-sync/get-source",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/bulk-sync/list",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/bulk-sync/create",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/bulk-sync/get",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/bulk-sync/remove",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/bulk-sync/update",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/bulk-sync/activate",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/bulk-sync/schemas/list",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/bulk-sync/schemas/patch",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/bulk-sync/schemas/get",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/bulk-sync/schemas/update",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/connections/get-types",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/connections/list",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/connections/create",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/connections/get",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/connections/remove",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/connections/update",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/connections/get-parameter-values",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/connections/get-source",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/connections/get-source-fields",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/connections/get-target",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/connections/get-target-fields",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/models/post",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/models/preview",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/models/list",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/models/create",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/models/get",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/models/remove",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/models/update",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/models/sample",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/events/list",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/events/get-types",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/jobs/get",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/identity/get",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/organization/list",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/organization/create",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/organization/get",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/organization/remove",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/organization/update",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/users/list",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/users/create",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/users/get",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/users/remove",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/users/update",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/users/create-api-key",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/permissions/policies/list",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/permissions/policies/create",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/permissions/policies/get",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/permissions/policies/remove",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/permissions/policies/update",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/permissions/roles/list",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/permissions/roles/create",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/permissions/roles/get",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/permissions/roles/remove",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/permissions/roles/update",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/model-sync/list",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/model-sync/create",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/model-sync/get-schedule-options",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/model-sync/get",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/model-sync/remove",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/model-sync/update",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/model-sync/activate",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/model-sync/start",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/model-sync/get-status",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/model-sync/executions/list",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/model-sync/executions/get",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/model-sync/executions/get-log-urls",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/model-sync/executions/get-logs",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/webhooks/list",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/webhooks/create",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/webhooks/get",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/webhooks/remove",
  "polytomic.docs.buildwithfern.com/2022-12-12/api-reference/webhooks/update",
  "polytomic.docs.buildwithfern.com/2021-05-23/introduction",
  "polytomic.docs.buildwithfern.com/2021-05-23/obtaining-api-keys",
  "polytomic.docs.buildwithfern.com/2021-05-23/quickstart",
  "polytomic.docs.buildwithfern.com/2021-05-23/concepts",
  "polytomic.docs.buildwithfern.com/2021-05-23/embedding-authentication",
  "polytomic.docs.buildwithfern.com/2021-05-23/versioning",
  "polytomic.docs.buildwithfern.com/2021-05-23/idempotent-requests",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/cdc-streaming-from-databases",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/affinity",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/airtable",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/amplitude",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/api",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/apollo-io",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/asana",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/ascend",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/attio",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/aws-s-3",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/aws-athena",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/aws-open-search",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/azure-blob-storage",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/azure-sql",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/biq-query",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/cloud-sql-my-sql",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/cloud-sql-postgres",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/chargebee",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/construction-wire",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/cosmos-db",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/customer-io",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/databricks",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/datadog",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/dbt-cloud",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/delighted",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/dialpad",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/dittofeed",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/dynamo-db",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/facebook-ads",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/freshdesk",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/front",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/full-story",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/google-cloud-storage",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/github",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/google-ads",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/google-workspace",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/google-sheets",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/harmonic",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/heap",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/honeycomb",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/hub-spot",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/intercom",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/iterable",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/jira",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/klaviyo",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/kustomer",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/linear",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/linkedin-ads",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/lob",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/mailercheck",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/marketo",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/mongo-db",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/microsoft-ads",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/my-sql",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/netsuite",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/outreach",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/pardot",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/pipedrive",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/postgres",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/predict-leads",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/quickbooks",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/recharge",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/redshift",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/redshift-serverless",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/reply-io",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/salesforce",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/segment",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/sftp",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/shopify",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/short-io",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/slack",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/snowflake",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/statsig",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/stripe",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/survicate",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/synapse",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/tixr",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/unbounce",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/uservoice",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/vanilla-forums",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/webhooks",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/zendesk-chat",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/zendesk-support",
  "polytomic.docs.buildwithfern.com/2021-05-23/configuring-your-connections/connections/zoom-info",
  "polytomic.docs.buildwithfern.com/2021-05-23/api-reference/connections/get-types",
  "polytomic.docs.buildwithfern.com/2021-05-23/api-reference/connections/list",
  "polytomic.docs.buildwithfern.com/2021-05-23/api-reference/connections/create",
  "polytomic.docs.buildwithfern.com/2021-05-23/api-reference/connections/get",
  "polytomic.docs.buildwithfern.com/2021-05-23/api-reference/connections/remove",
  "polytomic.docs.buildwithfern.com/2021-05-23/api-reference/connections/update",
  "polytomic.docs.buildwithfern.com/2021-05-23/api-reference/identity/api-v-1-get-identity",
  "polytomic.docs.buildwithfern.com/2021-05-23/api-reference/organization/list",
  "polytomic.docs.buildwithfern.com/2021-05-23/api-reference/organization/create",
  "polytomic.docs.buildwithfern.com/2021-05-23/api-reference/organization/get",
  "polytomic.docs.buildwithfern.com/2021-05-23/api-reference/organization/update",
  "polytomic.docs.buildwithfern.com/2021-05-23/api-reference/users/create",
  "polytomic.docs.buildwithfern.com/2021-05-23/api-reference/users/get",
  "polytomic.docs.buildwithfern.com/2021-05-23/api-reference/users/remove",
  "polytomic.docs.buildwithfern.com/2021-05-23/api-reference/users/update",
  "polytomic.docs.buildwithfern.com/2021-05-23/api-reference/model-sync/list",
  "polytomic.docs.buildwithfern.com/2021-05-23/api-reference/model-sync/get",
  "polytomic.docs.buildwithfern.com/2021-05-23/api-reference/model-sync/start",
  "polytomic.docs.buildwithfern.com/2021-05-23/api-reference/model-sync/executions/get",
]
`;

exports[`polytomic > gets navigation root for /2023-04-25/guides/introduction 1`] = `
{
  "authed": undefined,
  "redirect": "2023-04-25/introduction",
  "type": "notFound",
}
`;

exports[`polytomic > gets navigation root for /2023-04-25/not-found 1`] = `
{
  "authed": undefined,
  "redirect": "2023-04-25/introduction",
  "type": "notFound",
}
`;

exports[`polytomic > gets navigation root for /2024-02-08/guides/introduction 1`] = `
{
  "authed": undefined,
  "canonicalSlug": undefined,
  "featureFlags": undefined,
  "hidden": false,
  "icon": undefined,
  "id": "root..2024-02-08.uv.guides.guides.getting-started.introduction",
  "noindex": undefined,
  "orphaned": undefined,
  "pageId": "docs/2024-02-08/pages/getting-started/introduction.mdx",
  "slug": "2024-02-08/guides/introduction",
  "title": "Introduction",
  "type": "page",
  "viewers": undefined,
}
`;

exports[`polytomic > gets navigation root for /2024-02-08/guides/introduction 2`] = `"2024-02-08"`;

exports[`polytomic > gets navigation root for /2024-02-08/guides/introduction 3`] = `"2024-02-08/guides"`;

exports[`polytomic > gets navigation root for /guides/introduction 1`] = `
{
  "canonicalSlug": "2024-02-08/guides/introduction",
  "hidden": false,
  "id": "root..2024-02-08.uv.guides.guides.getting-started.introduction",
  "pageId": "docs/2024-02-08/pages/getting-started/introduction.mdx",
  "slug": "guides/introduction",
  "title": "Introduction",
  "type": "page",
}
`;

exports[`polytomic > gets navigation root for /guides/introduction 2`] = `"2024-02-08"`;

exports[`polytomic > gets navigation root for /guides/introduction 3`] = `"guides"`;
